# GlueGD

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
GlueGD/: glue.cpp  glue.hpp  main.cpp
GlueGD/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_win32.cpp
GlueGDLoader/: main.cpp  main.def
glue/: types.ml
